--- a/hello.html
+++ b/hello.html
@@ -17,5 +17,9 @@
 			Bienvenue dans cette formation GIT !
 		</div>
 		
+		<div>
+		     <p> Je suis Ramot KUISSI TAMBO technicien informatique à l'école national de la magistrature à Bordeaux et adjoint de Thomas CUELHO, Administrateur ststème. </p>
+		</div>
+		
 	
 </body></html>
