--- a/hello.html
+++ b/hello.html
@@ -18,7 +18,7 @@
 		</div>
 		
 		<div>
-		     <p> Je suis Ramot KUISSI TAMBO technicien informatique à l'école national de la magistrature à Bordeaux et adjoint de Thomas CUELHO, Administrateur ststème. </p>
+		     <p> Je suis Ramot KUISSI TAMBO technicien informatique à l'école national de la magistrature à Bordeaux et adjoint de Thomas CUELHO, Administrateur système. </p>
 		</div>
 		
 	
