Ajout des tites

--- a/hello.html
+++ b/hello.html
@@ -16,10 +16,20 @@
 		<div id="top-banner">
 			Bienvenue dans cette formation GIT !
 		</div>
-		
+                 <!-- description -->
+		<h1>Ma description </h1>
 		<div>
 		     <p> Je suis Ramoth KUISSI TAMBO technicien informatique à l'école national de la magistrature à Bordeaux et adjoint de Thomas CUELHO, Administrateur système. </p>
 		</div>
 		
+		
+		<!-- Mes récompernse -->
+		</div>
+		<h1>Mes récompenses </h1>
+		<div>
+		     <p> En constructions... </p>
+		</div>
 	
-</body></html>
+</body>
+
+</html>
