Ajout d'un gist

--- a/hello.html
+++ b/hello.html
@@ -29,6 +29,13 @@
 		<div>
 		     <p> En constructions... </p>
 		</div>
+		
+		<!-- Mon gist -->
+		</div>
+		<h1> Mon gist </h1>
+		<div>
+		     <p> <script src="https://gist.github.com/Ramothkgit/d72460cb0f4eff9b7c2097d3b706d12b.js"> </script></p>
+		</div>
 	
 </body>
 
